website/versioned_docs/version-3.4/model-deployment-prepackaged-server-pytorch.md
---
id: version-3.4-model-deployment-prepackaged-server-pytorch
title: PyTorch server
description: PyTorch server
original_id: model-deployment-prepackaged-server-pytorch
---

<div class="ee-only tooltip">Enterprise
  <span class="tooltiptext">Applicable to Enterprise tier only</span>
</div>

## Model Information

### Basic

Property    | Description
------------|------
Model image | `infuseai/pytorch-prepackaged:v0.1.0`
Input       | ndarray
Output      | ndarray
Repository | [Link](https://github.com/InfuseAI/primehub-seldon-servers/tree/master/pytorch)

### Model URI Structure

```bash
<model uri>
├── ModelClass.py
└── model.pt
```

There should be two files in the model URI

1. **model.pt**: The model file should be saved by `state_dict()` format.
1. **ModelClass.py**: A python defines the `PyTorchModel` class.

For more information, please see [PyTorch Saving & Loading documents](https://pytorch.org/tutorials/beginner/saving_loading_models.html#saving-loading-model-for-inference)


### How It Works

You can check the detailed code in [Github](https://github.com/InfuseAI/primehub-seldon-servers/blob/master/pytorch/pytorch/Model.py).
Here, we demonstrate by the pseudo-code.

**Load the model**
```python
def __init__(self, model_uri):
    model_file, model_class_file = load_from_model_uri(model_uri)
    model_class = load_model_class(model_class_file)
    self.model = model_class()
    self.model.load_state_dict(torch.load(model_file))
    self.model.eval()
```

**Predict**
```python
def predict(self, X):
    with torch.no_grad():
        inputs = torch.from_numpy(X)
        return self.model(inputs).numpy()
```

## Example

In this example, we use the CIFAR-10 dataset, which is used in the [PyTorch tutorial](https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html).

Property    | Description
------------|------
Model Image | `infuseai/pytorch-prepackaged:v0.1.0`
Model URI   | `gs://primehub-models/pytorch/CIFAR10`

**Test Request**

```bash
curl -X POST http://localhost:5000/api/v1.0/predictions \
    -H 'Content-Type: application/json' \
    -d '{ "data": {"ndarray": [[[[0.23921573162078857, 0.24705886840820312, 0.29411768913269043, 0.301960825920105, 0.2549020051956177, 0.22352945804595947, 0.2705882787704468, 0.24705886840820312, 0.23921573162078857, 0.24705886840820312, 0.2627451419830322, 0.2549020051956177, 0.2627451419830322, 0.301960825920105, 0.32549023628234863, 0.3333333730697632, 0.30980396270751953, 0.2705882787704468, 0.2549020051956177, 0.2549020051956177, 0.22352945804595947, 0.16862750053405762, 0.17647063732147217, 0.16078436374664307, 0.16862750053405762, 0.12156867980957031, 0.09803926944732666, 0.10588240623474121, 0.12156867980957031, 0.07450985908508301, -0.011764705181121826, -0.09019607305526733], [0.19215691089630127, 0.18431377410888672, 0.24705886840820312, 0.301960825920105, 0.2705882787704468, 0.2549020051956177, 0.2862745523452759, 0.2705882787704468, 0.27843141555786133, 0.22352945804595947, 0.21568632125854492, 0.24705886840820312, 0.27843141555786133, 0.3333333730697632, 0.34117650985717773, 0.34117650985717773, 0.32549023628234863, 0.2549020051956177, 0.20784318447113037, 0.18431377410888672, 0.13725495338439941, 0.09019613265991211, 0.09803926944732666, 0.10588240623474121, 0.16862750053405762, 0.15294122695922852, 0.13725495338439941, 0.11372554302215576, 0.12156867980957031, 0.06666672229766846, -0.019607841968536377, -0.06666666269302368], [0.18431377410888672, 0.18431377410888672, 0.23921573162078857, 0.30980396270751953, 0.2549020051956177, 0.27843141555786133, 0.29411768913269043, 0.29411768913269043, 0.27843141555786133, 0.2705882787704468, 0.23921573162078857, 0.23137259483337402, 0.2627451419830322, 0.301960825920105, 0.30980396270751953, 0.32549023628234863, 0.3333333730697632, 0.24705886840820312, 0.13725495338439941, -0.05098038911819458, -0.13725489377975464, -0.23137253522872925, -0.2078431248664856, -0.10588234663009644, -0.05882352590560913, 0.050980448722839355, 0.12156867980957031, 0.09803926944732666, 0.11372554302215576, 0.09019613265991211, 0.019607901573181152, -0.05882352590560913], [0.21568632125854492, 0.21568632125854492, 0.2549020051956177, 0.3647059202194214, 0.30980396270751953, 0.30980396270751953, 0.32549023628234863, 0.32549023628234863, 0.29411768913269043, 0.29411768913269043, 0.30980396270751953, 0.49803924560546875, 0.38823533058166504, 0.23137259483337402, 0.2705882787704468, 0.2862745523452759, 0.23921573162078857, 0.16862750053405762, -0.18431371450424194, -0.1921568512916565, -0.23137253522872925, -0.27843135595321655, -0.37254899740219116, -0.41960781812667847, -0.32549017667770386, -0.3490195870399475, -0.11372548341751099, 0.035294175148010254, 0.09803926944732666, 0.09803926944732666, 0.06666672229766846, -0.003921568393707275], [0.21568632125854492, 0.22352945804595947, 0.2627451419830322, 0.3333333730697632, 0.32549023628234863, 0.27843141555786133, 0.32549023628234863, 0.301960825920105, 0.2862745523452759, 0.2862745523452759, 0.35686278343200684, 0.929411768913269, 0.529411792755127, 0.18431377410888672, 0.14509809017181396, 0.11372554302215576, -0.1294117569923401, -0.38823527097702026, -0.3333333134651184, -0.11372548341751099, -0.12156862020492554, -0.16862744092941284, -0.2392156720161438, -0.270588219165802, -0.41960781812667847, -0.34117645025253296, -0.3333333134651184, -0.1764705777168274, 0.003921627998352051, 0.08235299587249756, 0.043137311935424805, 0.011764764785766602], [0.16078436374664307, 0.043137311935424805, 0.019607901573181152, 0.15294122695922852, 0.2627451419830322, 0.29411768913269043, 0.30980396270751953, 0.30980396270751953, 0.27843141555786133, 0.29411768913269043, 0.27843141555786133, 0.4117647409439087, 0.23137259483337402, 0.003921627998352051, -0.2392156720161438, -0.4823529124259949, -0.4588235020637512, -0.4823529124259949, -0.3019607663154602, -0.07450979948043823, -0.04313725233078003, -0.06666666269302368, -0.10588234663009644, -0.26274508237838745, -0.2235293984413147, -0.2862744927406311, -0.545098066329956, -0.4745097756385803, -0.15294116735458374, 0.09803926944732666, 0.08235299587249756, 0.050980448722839355], [-0.003921568393707275, -0.1450980305671692, -0.6313725709915161, -0.30980390310287476, 0.20000004768371582, 0.3333333730697632, 0.3176470994949341, 0.3333333730697632, 0.32549023628234863, 0.301960825920105, 0.2862745523452759, 0.15294122695922852, 0.011764764785766602, -0.003921568393707275, -0.21568626165390015, -0.46666663885116577, -0.38823527097702026, -0.43529409170150757, -0.3490195870399475, 0.035294175148010254, 0.14509809017181396, -0.027450978755950928, -0.1764705777168274, -0.1607843041419983, -0.09803920984268188, -0.3333333134651184, -0.5058823823928833, -0.6392157077789307, -0.3803921341896057, 0.035294175148010254, 0.10588240623474121, 0.050980448722839355], [0.027451038360595703, -0.2235293984413147, -0.6705882549285889, -0.45098036527633667, 0.12156867980957031, 0.30980396270751953, 0.29411768913269043, 0.3176470994949341, 0.34117650985717773, 0.2627451419830322, 0.09803926944732666, -0.05882352590560913, 0.019607901573181152, 0.12941181659698486, -0.09019607305526733, -0.30980390310287476, -0.2862744927406311, -0.3333333134651184, -0.3960784077644348, -0.027450978755950928, 0.27843141555786133, 0.06666672229766846, -0.19999998807907104, -0.16862744092941284, -0.21568626165390015, -0.3333333134651184, -0.5764706134796143, -0.615686297416687, -0.5529412031173706, -0.1607843041419983, 0.08235299587249756, 0.06666672229766846], [0.3333333730697632, -0.1921568512916565, -0.5764706134796143, -0.027450978755950928, 0.20000004768371582, 0.2627451419830322, 0.27843141555786133, 0.301960825920105, 0.29411768913269043, 0.3647059202194214, -0.11372548341751099, -0.019607841968536377, 0.23137259483337402, 0.22352945804595947, -0.05098038911819458, -0.32549017667770386, -0.35686272382736206, -0.34117645025253296, -0.37254899740219116, -0.3647058606147766, 0.08235299587249756, 0.14509809017181396, -0.11372548341751099, -0.3176470398902893, -0.3490195870399475, -0.32549017667770386, -0.4431372284889221, -0.5607843399047852, -0.686274528503418, -0.41960781812667847, 0.043137311935424805, 0.07450985908508301], [0.4117647409439087, 0.050980448722839355, -0.26274508237838745, 0.20784318447113037, 0.3647059202194214, 0.23921573162078857, 0.22352945804595947, 0.20000004768371582, 0.6235294342041016, 0.8588235378265381, 0.6235294342041016, 0.22352945804595947, 0.3647059202194214, 0.16078436374664307, -0.019607841968536377, -0.270588219165802, -0.32549017667770386, -0.41960781812667847, -0.5372549295425415, -0.40392154455184937, 0.07450985908508301, 0.12156867980957031, 0.043137311935424805, -0.16862744092941284, -0.32549017667770386, -0.3176470398902893, -0.34117645025253296, -0.4117646813392639, -0.6078431606292725, -0.686274528503418, -0.2549019455909729, 0.035294175148010254], [0.43529415130615234, -0.15294116735458374, 0.11372554302215576, 0.29411768913269043, 0.38823533058166504, 0.21568632125854492, 0.24705886840820312, -0.04313725233078003, 0.6705882549285889, 0.8588235378265381, 0.7254902124404907, 0.2862745523452759, 0.43529415130615234, 0.22352945804595947, -0.019607841968536377, -0.05882352590560913, -0.38823527097702026, -0.37254899740219116, -0.6470588445663452, -0.2862744927406311, 0.37254905700683594, 0.23137259483337402, 0.21568632125854492, -0.1607843041419983, -0.3176470398902893, -0.1921568512916565, -0.30980390310287476, -0.38823527097702026, -0.5372549295425415, -0.6784313917160034, -0.5372549295425415, -0.18431371450424194], [0.4745098352432251, -0.21568626165390015, 0.058823585510253906, 0.3333333730697632, 0.46666669845581055, 0.301960825920105, 0.35686278343200684, 0.050980448722839355, -0.08235293626785278, 0.5215686559677124, 0.5607843399047852, 0.3333333730697632, 0.45098042488098145, 0.48235297203063965, 0.050980448722839355, -0.08235293626785278, -0.19999998807907104, -0.34117645025253296, -0.7019608020782471, -0.019607841968536377, 0.6470588445663452, 0.2549020051956177, 0.14509809017181396, -0.270588219165802, -0.3490195870399475, -0.26274508237838745, -0.18431371450424194, -0.3333333134651184, -0.427450954914093, -0.5686274766921997, -0.5137255191802979, -0.40392154455184937], [0.48235297203063965, -0.29411762952804565, -0.003921568393707275, 0.37254905700683594, 0.3647059202194214, 0.301960825920105, 0.3960784673690796, 0.24705886840820312, -0.2392156720161438, 0.3176470994949341, 0.3176470994949341, 0.07450985908508301, 0.458823561668396, 0.6941176652908325, 0.2549020051956177, -0.03529411554336548, -0.05882352590560913, -0.09803920984268188, -0.6078431606292725, 0.17647063732147217, 0.5215686559677124, 0.21568632125854492, -0.03529411554336548, -0.2862744927406311, -0.34117645025253296, -0.34117645025253296, -0.2549019455909729, -0.32549017667770386, -0.34117645025253296, -0.427450954914093, -0.3803921341896057, -0.427450954914093], [0.48235297203063965, -0.270588219165802, 0.19215691089630127, 0.45098042488098145, -0.06666666269302368, 0.06666672229766846, 0.35686278343200684, 0.30980396270751953, -0.1921568512916565, 0.15294122695922852, 0.13725495338439941, 0.30980396270751953, 0.48235297203063965, 0.772549033164978, 0.4117647409439087, 0.10588240623474121, -0.011764705181121826, -0.08235293626785278, -0.4431372284889221, 0.20784318447113037, 0.458823561668396, 0.16862750053405762, -0.10588234663009644, -0.3176470398902893, -0.37254899740219116, -0.43529409170150757, -0.37254899740219116, -0.2235293984413147, -0.21568626165390015, -0.29411762952804565, -0.2392156720161438, -0.26274508237838745], [0.5215686559677124, -0.15294116735458374, 0.3176470994949341, 0.458823561668396, -0.1764705777168274, -0.2235293984413147, 0.22352945804595947, 0.30980396270751953, -0.21568626165390015, -0.09803920984268188, 0.08235299587249756, 0.5529412031173706, 0.4901961088180542, 0.3490196466445923, 0.13725495338439941, 0.20784318447113037, 0.14509809017181396, -0.1921568512916565, -0.4431372284889221, 0.19215691089630127, 0.40392160415649414, 0.07450985908508301, 0.019607901573181152, -0.13725489377975464, -0.3333333134651184, -0.2862744927406311, -0.2549019455909729, -0.1450980305671692, -0.09803920984268188, -0.21568626165390015, -0.2392156720161438, -0.08235293626785278], [0.545098066329956, 0.035294175148010254, 0.3490196466445923, 0.4431372880935669, 0.019607901573181152, -0.38823527097702026, 0.09803926944732666, 0.21568632125854492, -0.09803920984268188, 0.019607901573181152, 0.12156867980957031, 0.8039215803146362, 0.8980392217636108, 0.13725495338439941, 0.058823585510253906, 0.027451038360595703, -0.05098038911819458, -0.15294116735458374, -0.2549019455909729, 0.12941181659698486, 0.3176470994949341, 0.19215691089630127, -0.12156862020492554, -0.3176470398902893, -0.4431372284889221, -0.3176470398902893, -0.1764705777168274, -0.12156862020492554, -0.05882352590560913, -0.1921568512916565, -0.05098038911819458, 0.06666672229766846], [0.5921568870544434, 0.14509809017181396, 0.3176470994949341, 0.49803924560546875, 0.3176470994949341, -0.38823527097702026, -0.011764705181121826, 0.08235299587249756, 0.08235299587249756, -0.24705880880355835, 0.20784318447113037, 0.35686278343200684, 0.2705882787704468, 0.09803926944732666, -0.11372548341751099, -0.11372548341751099, -0.2078431248664856, -0.1764705777168274, -0.12156862020492554, 0.34117650985717773, 0.22352945804595947, 0.16078436374664307, 0.058823585510253906, -0.1450980305671692, -0.38823527097702026, -0.3803921341896057, -0.26274508237838745, -0.2078431248664856, -0.1607843041419983, -0.019607841968536377, 0.18431377410888672, 0.12941181659698486], [0.6784313917160034, 0.27843141555786133, 0.2862745523452759, 0.43529415130615234, 0.3803921937942505, -0.26274508237838745, -0.24705880880355835, 0.22352945804595947, 0.16078436374664307, -0.16862744092941284, 0.011764764785766602, -0.07450979948043823, -0.10588234663009644, -0.09019607305526733, -0.19999998807907104, -0.09803920984268188, -0.32549017667770386, -0.2078431248664856, 0.12941181659698486, -0.07450979948043823, -0.46666663885116577, 0.003921627998352051, 0.043137311935424805, -0.4117646813392639, -0.529411792755127, -0.545098066329956, -0.4431372284889221, -0.19999998807907104, -0.09019607305526733, 0.12156867980957031, 0.17647063732147217, 0.09803926944732666], [0.6627451181411743, 0.3960784673690796, 0.30980396270751953, 0.35686278343200684, 0.3803921937942505, -0.027450978755950928, -0.32549017667770386, 0.10588240623474121, 0.20000004768371582, 0.058823585510253906, -0.18431371450424194, -0.3960784077644348, 0.050980448722839355, -0.027450978755950928, 0.011764764785766602, 0.15294122695922852, -0.3333333134651184, -0.27843135595321655, 0.17647063732147217, 0.035294175148010254, -0.08235293626785278, -0.1607843041419983, -0.4117646813392639, -0.498039186000824, -0.6549019813537598, -0.4901960492134094, -0.32549017667770386, 0.043137311935424805, 0.21568632125854492, 0.2549020051956177, 0.20784318447113037, 0.18431377410888672], [0.5607843399047852, 0.46666669845581055, 0.34117650985717773, 0.3647059202194214, 0.38823533058166504, 0.12941181659698486, -0.32549017667770386, -0.06666666269302368, -0.04313725233078003, 0.07450985908508301, 0.12941181659698486, -0.45098036527633667, 0.011764764785766602, -0.15294116735458374, 0.13725495338439941, 0.4431372880935669, -0.09019607305526733, -0.427450954914093, 0.027451038360595703, 0.07450985908508301, 0.050980448722839355, -0.3019607663154602, -0.6000000238418579, -0.5921568870544434, -0.6313725709915161, -0.29411762952804565, -0.05098038911819458, 0.27843141555786133, 0.34117650985717773, 0.2862745523452759, 0.23921573162078857, 0.16862750053405762], [0.29411768913269043, 0.529411792755127, 0.40392160415649414, 0.38823533058166504, 0.41960787773132324, 0.19215691089630127, -0.2235293984413147, 0.027451038360595703, 0.34117650985717773, -0.1921568512916565, -0.270588219165802, -0.37254899740219116, -0.270588219165802, -0.04313725233078003, 0.3960784673690796, 0.49803924560546875, 0.17647063732147217, -0.21568626165390015, -0.3019607663154602, -0.3176470398902893, -0.529411792755127, -0.6392157077789307, -0.7019608020782471, -0.8117647171020508, -0.6392157077789307, -0.529411792755127, -0.15294116735458374, 0.12941181659698486, 0.12941181659698486, 0.003921627998352051, -0.003921568393707275, -0.05882352590560913], [-0.08235293626785278, 0.529411792755127, 0.38823533058166504, 0.3960784673690796, 0.41960787773132324, 0.08235299587249756, -0.3490195870399475, 0.17647063732147217, 0.9215686321258545, 0.7176470756530762, 0.043137311935424805, 0.050980448722839355, 0.16862750053405762, 0.3803921937942505, 0.4901961088180542, 0.5215686559677124, 0.3176470994949341, -0.019607841968536377, -0.13725489377975464, -0.5215686559677124, -0.7254902124404907, -0.7333333492279053, -0.615686297416687, -0.545098066329956, -0.5215686559677124, -0.545098066329956, -0.4588235020637512, -0.43529409170150757, -0.38823527097702026, -0.4588235020637512, -0.5372549295425415, -0.5686274766921997], [-0.3803921341896057, 0.37254905700683594, 0.3647059202194214, 0.3803921937942505, 0.38823533058166504, 0.09803926944732666, -0.1450980305671692, 0.6549019813537598, 0.9843137264251709, 0.9764705896377563, 0.6313725709915161, -0.027450978755950928, -0.10588234663009644, -0.027450978755950928, -0.09019607305526733, -0.04313725233078003, -0.18431371450424194, -0.46666663885116577, -0.46666663885116577, -0.529411792755127, -0.5921568870544434, -0.6078431606292725, -0.6000000238418579, -0.5607843399047852, -0.5607843399047852, -0.6000000238418579, -0.6627451181411743, -0.6000000238418579, -0.5372549295425415, -0.6235294342041016, -0.6627451181411743, -0.6705882549285889], [-0.6784313917160034, -0.24705880880355835, 0.12941181659698486, 0.3176470994949341, 0.3960784673690796, 0.29411768913269043, 0.29411768913269043, 0.929411768913269, 0.9843137264251709, 0.7803921699523926, -0.13725489377975464, -0.529411792755127, -0.5843137502670288, -0.615686297416687, -0.615686297416687, -0.6235294342041016, -0.6470588445663452, -0.6705882549285889, -0.6392157077789307, -0.6705882549285889, -0.7019608020782471, -0.6392157077789307, -0.6392157077789307, -0.6627451181411743, -0.6705882549285889, -0.6392157077789307, -0.6392157077789307, -0.6078431606292725, -0.5686274766921997, -0.5843137502670288, -0.6000000238418579, -0.6470588445663452], [-0.772549033164978, -0.772549033164978, -0.5372549295425415, 0.027451038360595703, 0.301960825920105, 0.035294175148010254, 0.5215686559677124, 0.9921568632125854, 0.8901960849761963, 0.10588240623474121, -0.5215686559677124, -0.6078431606292725, -0.6078431606292725, -0.6000000238418579, -0.615686297416687, -0.6078431606292725, -0.6313725709915161, -0.6705882549285889, -0.6941176652908325, -0.7333333492279053, -0.7254902124404907, -0.6941176652908325, -0.7019608020782471, -0.6705882549285889, -0.6470588445663452, -0.5607843399047852, -0.5137255191802979, -0.5372549295425415, -0.5607843399047852, -0.6078431606292725, -0.6392157077789307, -0.6000000238418579], [-0.6235294342041016, -0.7647058963775635, -0.7333333492279053, -0.427450954914093, 0.003921627998352051, 0.003921627998352051, 0.686274528503418, 1.0, 0.46666669845581055, -0.4823529124259949, -0.5764706134796143, -0.6078431606292725, -0.5921568870544434, -0.5921568870544434, -0.6392157077789307, -0.6470588445663452, -0.6627451181411743, -0.6784313917160034, -0.7176470756530762, -0.6941176652908325, -0.686274528503418, -0.686274528503418, -0.6627451181411743, -0.6392157077789307, -0.5372549295425415, -0.5137255191802979, -0.498039186000824, -0.5372549295425415, -0.5764706134796143, -0.6078431606292725, -0.45098036527633667, -0.3490195870399475], [-0.5921568870544434, -0.7254902124404907, -0.7568627595901489, -0.6784313917160034, -0.4823529124259949, 0.003921627998352051, 0.7568627595901489, 0.8823529481887817, -0.027450978755950928, -0.545098066329956, -0.615686297416687, -0.5607843399047852, -0.5764706134796143, -0.6549019813537598, -0.6549019813537598, -0.6313725709915161, -0.6392157077789307, -0.6627451181411743, -0.6627451181411743, -0.6549019813537598, -0.6549019813537598, -0.6470588445663452, -0.5764706134796143, -0.545098066329956, -0.5764706134796143, -0.6392157077789307, -0.6627451181411743, -0.7176470756530762, -0.6000000238418579, -0.427450954914093, -0.3333333134651184, -0.40392154455184937], [-0.6078431606292725, -0.7254902124404907, -0.772549033164978, -0.7254902124404907, -0.6549019813537598, -0.38823527097702026, 0.5843137502670288, 0.6549019813537598, -0.2392156720161438, -0.4901960492134094, -0.5764706134796143, -0.6235294342041016, -0.545098066329956, -0.6235294342041016, -0.686274528503418, -0.6470588445663452, -0.6313725709915161, -0.6235294342041016, -0.6313725709915161, -0.6392157077789307, -0.6000000238418579, -0.6941176652908325, -0.6941176652908325, -0.6235294342041016, -0.6313725709915161, -0.6941176652908325, -0.7803921699523926, -0.686274528503418, -0.4745097756385803, -0.4745097756385803, -0.6392157077789307, -0.6000000238418579], [-0.6078431606292725, -0.7254902124404907, -0.7490196228027344, -0.7411764860153198, -0.6784313917160034, -0.6392157077789307, -0.18431371450424194, 0.3333333730697632, -0.498039186000824, -0.5764706134796143, -0.5921568870544434, -0.5843137502670288, -0.5215686559677124, -0.545098066329956, -0.5764706134796143, -0.6470588445663452, -0.6705882549285889, -0.6784313917160034, -0.6392157077789307, -0.615686297416687, -0.6392157077789307, -0.6705882549285889, -0.686274528503418, -0.6941176652908325, -0.7098039388656616, -0.686274528503418, -0.6549019813537598, -0.5058823823928833, -0.6313725709915161, -0.7568627595901489, -0.8823529481887817, -0.6000000238418579], [-0.46666663885116577, -0.6705882549285889, -0.7568627595901489, -0.7019608020782471, -0.7098039388656616, -0.6627451181411743, -0.6705882549285889, -0.4431372284889221, -0.615686297416687, -0.7568627595901489, -0.7882353067398071, -0.7019608020782471, -0.615686297416687, -0.5607843399047852, -0.545098066329956, -0.5843137502670288, -0.5607843399047852, -0.529411792755127, -0.5529412031173706, -0.5843137502670288, -0.6078431606292725, -0.6470588445663452, -0.6941176652908325, -0.7411764860153198, -0.6705882549285889, -0.5137255191802979, -0.3803921341896057, -0.427450954914093, -0.5607843399047852, -0.7019608020782471, -0.8980392217636108, -0.686274528503418], [-0.5215686559677124, -0.615686297416687, -0.7254902124404907, -0.6627451181411743, -0.6941176652908325, -0.6705882549285889, -0.6549019813537598, -0.686274528503418, -0.6705882549285889, -0.7882353067398071, -0.8196078538894653, -0.7647058963775635, -0.7882353067398071, -0.772549033164978, -0.7176470756530762, -0.6313725709915161, -0.5607843399047852, -0.5137255191802979, -0.4823529124259949, -0.4117646813392639, -0.4588235020637512, -0.615686297416687, -0.6627451181411743, -0.6627451181411743, -0.529411792755127, -0.3333333134651184, -0.1450980305671692, -0.270588219165802, -0.529411792755127, -0.7960784435272217, -0.772549033164978, -0.843137264251709], [-0.5764706134796143, -0.5607843399047852, -0.6470588445663452, -0.6627451181411743, -0.686274528503418, -0.686274528503418, -0.686274528503418, -0.7019608020782471, -0.7176470756530762, -0.7960784435272217, -0.8274509906768799, -0.772549033164978, -0.8039215803146362, -0.772549033164978, -0.8509804010391235, -0.8588235378265381, -0.7490196228027344, -0.6313725709915161, -0.5215686559677124, -0.41960781812667847, -0.4823529124259949, -0.5843137502670288, -0.5921568870544434, -0.6470588445663452, -0.4745097756385803, -0.3019607663154602, -0.1764705777168274, -0.3019607663154602, -0.6235294342041016, -0.8117647171020508, -0.7333333492279053, -0.8352941274642944]], [[-0.12156862020492554, -0.1294117569923401, -0.09019607305526733, -0.07450979948043823, -0.12156862020492554, -0.1450980305671692, -0.09803920984268188, -0.11372548341751099, -0.1294117569923401, -0.11372548341751099, -0.09019607305526733, -0.1294117569923401, -0.1294117569923401, -0.08235293626785278, -0.08235293626785278, -0.06666666269302368, -0.08235293626785278, -0.11372548341751099, -0.1294117569923401, -0.12156862020492554, -0.1450980305671692, -0.1607843041419983, -0.1607843041419983, -0.16862744092941284, -0.1607843041419983, -0.2078431248664856, -0.23137253522872925, -0.2392156720161438, -0.2392156720161438, -0.2549019455909729, -0.2862744927406311, -0.3333333134651184], [-0.12156862020492554, -0.13725489377975464, -0.10588234663009644, -0.09019607305526733, -0.12156862020492554, -0.11372548341751099, -0.08235293626785278, -0.10588234663009644, -0.09019607305526733, -0.13725489377975464, -0.1294117569923401, -0.13725489377975464, -0.11372548341751099, -0.06666666269302368, -0.08235293626785278, -0.09803920984268188, -0.09803920984268188, -0.1294117569923401, -0.12156862020492554, -0.09803920984268188, -0.13725489377975464, -0.18431371450424194, -0.19999998807907104, -0.21568626165390015, -0.1764705777168274, -0.19999998807907104, -0.19999998807907104, -0.2392156720161438, -0.23137253522872925, -0.2549019455909729, -0.2862744927406311, -0.30980390310287476], [-0.13725489377975464, -0.1450980305671692, -0.1294117569923401, -0.1294117569923401, -0.16862744092941284, -0.09803920984268188, -0.08235293626785278, -0.08235293626785278, -0.09803920984268188, -0.09803920984268188, -0.10588234663009644, -0.1450980305671692, -0.1294117569923401, -0.09803920984268188, -0.10588234663009644, -0.11372548341751099, -0.09019607305526733, -0.10588234663009644, -0.1294117569923401, -0.24705880880355835, -0.29411762952804565, -0.38823527097702026, -0.3960784077644348, -0.3333333134651184, -0.32549017667770386, -0.24705880880355835, -0.1921568512916565, -0.2235293984413147, -0.2235293984413147, -0.23137253522872925, -0.2549019455909729, -0.3019607663154602], [-0.1607843041419983, -0.13725489377975464, -0.1450980305671692, -0.12156862020492554, -0.13725489377975464, -0.08235293626785278, -0.05882352590560913, -0.06666666269302368, -0.09803920984268188, -0.08235293626785278, -0.03529411554336548, 0.14509809017181396, 0.019607901573181152, -0.1294117569923401, -0.09803920984268188, -0.10588234663009644, -0.12156862020492554, -0.1294117569923401, -0.37254899740219116, -0.3176470398902893, -0.29411762952804565, -0.29411762952804565, -0.4117646813392639, -0.5058823823928833, -0.45098036527633667, -0.5137255191802979, -0.3333333134651184, -0.23137253522872925, -0.19999998807907104, -0.2078431248664856, -0.2235293984413147, -0.26274508237838745], [-0.1607843041419983, -0.10588234663009644, -0.09803920984268188, -0.10588234663009644, -0.10588234663009644, -0.11372548341751099, -0.05882352590560913, -0.09019607305526733, -0.11372548341751099, -0.09019607305526733, 0.003921627998352051, 0.6784313917160034, 0.22352945804595947, -0.10588234663009644, -0.1294117569923401, -0.15294116735458374, -0.37254899740219116, -0.5843137502670288, -0.4588235020637512, -0.1921568512916565, -0.13725489377975464, -0.10588234663009644, -0.19999998807907104, -0.26274508237838745, -0.43529409170150757, -0.38823527097702026, -0.427450954914093, -0.3490195870399475, -0.24705880880355835, -0.2078431248664856, -0.26274508237838745, -0.270588219165802], [-0.1450980305671692, -0.18431371450424194, -0.21568626165390015, -0.12156862020492554, -0.09803920984268188, -0.11372548341751099, -0.09019607305526733, -0.09803920984268188, -0.1294117569923401, -0.09019607305526733, -0.07450979948043823, 0.08235299587249756, -0.04313725233078003, -0.19999998807907104, -0.4117646813392639, -0.6078431606292725, -0.545098066329956, -0.5607843399047852, -0.3490195870399475, -0.11372548341751099, -0.05098038911819458, -0.04313725233078003, -0.09019607305526733, -0.24705880880355835, -0.21568626165390015, -0.2862744927406311, -0.545098066329956, -0.545098066329956, -0.34117645025253296, -0.1764705777168274, -0.23137253522872925, -0.2549019455909729], [-0.21568626165390015, -0.2549019455909729, -0.7098039388656616, -0.41960781812667847, -0.08235293626785278, -0.07450979948043823, -0.09803920984268188, -0.07450979948043823, -0.08235293626785278, -0.09019607305526733, -0.05882352590560913, -0.1607843041419983, -0.23137253522872925, -0.15294116735458374, -0.3176470398902893, -0.4745097756385803, -0.3490195870399475, -0.4117646813392639, -0.34117645025253296, 0.019607901573181152, 0.11372554302215576, -0.07450979948043823, -0.2235293984413147, -0.19999998807907104, -0.1294117569923401, -0.3490195870399475, -0.4431372284889221, -0.6313725709915161, -0.5215686559677124, -0.23137253522872925, -0.2235293984413147, -0.270588219165802], [-0.09803920984268188, -0.24705880880355835, -0.6627451181411743, -0.498039186000824, -0.1294117569923401, -0.08235293626785278, -0.10588234663009644, -0.09019607305526733, -0.06666666269302368, -0.11372548341751099, -0.1450980305671692, -0.26274508237838745, -0.13725489377975464, 0.027451038360595703, -0.16862744092941284, -0.3176470398902893, -0.2549019455909729, -0.30980390310287476, -0.3960784077644348, -0.07450979948043823, 0.20000004768371582, -0.027450978755950928, -0.270588219165802, -0.23137253522872925, -0.270588219165802, -0.3647058606147766, -0.529411792755127, -0.5843137502670288, -0.6313725709915161, -0.3490195870399475, -0.1921568512916565, -0.2392156720161438], [0.2627451419830322, -0.1764705777168274, -0.545098066329956, -0.05098038911819458, -0.027450978755950928, -0.11372548341751099, -0.08235293626785278, -0.04313725233078003, -0.05098038911819458, 0.058823585510253906, -0.3019607663154602, -0.1764705777168274, 0.10588240623474121, 0.12156867980957031, -0.1294117569923401, -0.37254899740219116, -0.3647058606147766, -0.3333333134651184, -0.38823527097702026, -0.4431372284889221, -0.019607841968536377, 0.058823585510253906, -0.1921568512916565, -0.3803921341896057, -0.3960784077644348, -0.35686272382736206, -0.427450954914093, -0.5529412031173706, -0.7254902124404907, -0.5372549295425415, -0.16862744092941284, -0.1921568512916565], [0.3803921937942505, 0.09019613265991211, -0.21568626165390015, 0.20784318447113037, 0.16862750053405762, -0.09019607305526733, -0.09019607305526733, -0.07450979948043823, 0.4117647409439087, 0.6784313917160034, 0.4117647409439087, 0.027451038360595703, 0.20000004768371582, 0.027451038360595703, -0.13725489377975464, -0.3333333134651184, -0.34117645025253296, -0.41960781812667847, -0.5529412031173706, -0.46666663885116577, -0.019607841968536377, 0.043137311935424805, -0.027450978755950928, -0.23137253522872925, -0.3647058606147766, -0.3333333134651184, -0.3333333134651184, -0.40392154455184937, -0.615686297416687, -0.7647058963775635, -0.4117646813392639, -0.1921568512916565], [0.43529415130615234, -0.09019607305526733, 0.18431377410888672, 0.32549023628234863, 0.22352945804595947, -0.12156862020492554, -0.07450979948043823, -0.3019607663154602, 0.545098066329956, 0.7568627595901489, 0.49803924560546875, 0.058823585510253906, 0.24705886840820312, 0.07450985908508301, -0.15294116735458374, -0.1294117569923401, -0.40392154455184937, -0.37254899740219116, -0.6549019813537598, -0.3333333134651184, 0.29411768913269043, 0.15294122695922852, 0.15294122695922852, -0.21568626165390015, -0.3490195870399475, -0.19999998807907104, -0.30980390310287476, -0.3803921341896057, -0.5372549295425415, -0.7176470756530762, -0.6392157077789307, -0.3647058606147766], [0.49803924560546875, -0.15294116735458374, 0.12941181659698486, 0.37254905700683594, 0.30980396270751953, -0.05882352590560913, -0.03529411554336548, -0.270588219165802, -0.2549019455909729, 0.4274510145187378, 0.34117650985717773, 0.11372554302215576, 0.2627451419830322, 0.34117650985717773, -0.06666666269302368, -0.1607843041419983, -0.23137253522872925, -0.34117645025253296, -0.7019608020782471, -0.05098038911819458, 0.5764706134796143, 0.19215691089630127, 0.09019613265991211, -0.3019607663154602, -0.37254899740219116, -0.270588219165802, -0.18431371450424194, -0.3176470398902893, -0.4117646813392639, -0.5843137502670288, -0.5686274766921997, -0.5607843399047852], [0.5215686559677124, -0.24705880880355835, 0.050980448722839355, 0.4117647409439087, 0.22352945804595947, -0.03529411554336548, -0.03529411554336548, -0.1450980305671692, -0.46666663885116577, 0.20784318447113037, 0.12941181659698486, -0.10588234663009644, 0.301960825920105, 0.5843137502670288, 0.16862750053405762, -0.11372548341751099, -0.10588234663009644, -0.10588234663009644, -0.6078431606292725, 0.15294122695922852, 0.46666669845581055, 0.16862750053405762, -0.07450979948043823, -0.30980390310287476, -0.3490195870399475, -0.34117645025253296, -0.2549019455909729, -0.3176470398902893, -0.3176470398902893, -0.427450954914093, -0.41960781812667847, -0.5686274766921997], [0.5058823823928833, -0.2549019455909729, 0.20784318447113037, 0.4745098352432251, -0.13725489377975464, -0.16862744092941284, -0.027450978755950928, -0.09019607305526733, -0.43529409170150757, 0.035294175148010254, -0.019607841968536377, 0.16862750053405762, 0.3647059202194214, 0.6941176652908325, 0.3490196466445923, 0.027451038360595703, -0.08235293626785278, -0.10588234663009644, -0.4431372284889221, 0.19215691089630127, 0.41960787773132324, 0.12941181659698486, -0.13725489377975464, -0.3333333134651184, -0.37254899740219116, -0.427450954914093, -0.37254899740219116, -0.21568626165390015, -0.2078431248664856, -0.30980390310287476, -0.3019607663154602, -0.427450954914093], [0.5372549295425415, -0.1607843041419983, 0.30980396270751953, 0.458823561668396, -0.1450980305671692, -0.3019607663154602, -0.06666666269302368, -0.04313725233078003, -0.41960781812667847, -0.16862744092941284, -0.03529411554336548, 0.45098042488098145, 0.4117647409439087, 0.29411768913269043, 0.09803926944732666, 0.12156867980957031, 0.06666672229766846, -0.21568626165390015, -0.4431372284889221, 0.19215691089630127, 0.37254905700683594, 0.043137311935424805, 0.003921627998352051, -0.1450980305671692, -0.32549017667770386, -0.270588219165802, -0.24705880880355835, -0.13725489377975464, -0.09019607305526733, -0.24705880880355835, -0.3333333134651184, -0.2549019455909729], [0.545098066329956, 0.011764764785766602, 0.30980396270751953, 0.3960784673690796, 0.07450985908508301, -0.3490195870399475, -0.05882352590560913, -0.019607841968536377, -0.26274508237838745, -0.05882352590560913, 0.027451038360595703, 0.7333333492279053, 0.8509804010391235, 0.08235299587249756, 0.019607901573181152, -0.05098038911819458, -0.12156862020492554, -0.18431371450424194, -0.30980390310287476, 0.050980448722839355, 0.24705886840820312, 0.15294122695922852, -0.15294116735458374, -0.3333333134651184, -0.43529409170150757, -0.30980390310287476, -0.18431371450424194, -0.1450980305671692, -0.13725489377975464, -0.32549017667770386, -0.24705880880355835, -0.18431371450424194], [0.5921568870544434, 0.14509809017181396, 0.2862745523452759, 0.4274510145187378, 0.3333333730697632, -0.32549017667770386, -0.019607841968536377, -0.011764705181121826, -0.05098038911819458, -0.37254899740219116, 0.12156867980957031, 0.27843141555786133, 0.19215691089630127, 0.035294175148010254, -0.16862744092941284, -0.16862744092941284, -0.2078431248664856, -0.2078431248664856, -0.29411762952804565, 0.12156867980957031, 0.08235299587249756, 0.10588240623474121, 0.019607901573181152, -0.1764705777168274, -0.40392154455184937, -0.3803921341896057, -0.270588219165802, -0.2862744927406311, -0.3490195870399475, -0.30980390310287476, -0.15294116735458374, -0.18431371450424194], [0.686274528503418, 0.301960825920105, 0.30980396270751953, 0.4431372880935669, 0.4274510145187378, -0.19999998807907104, -0.24705880880355835, 0.16862750053405762, 0.07450985908508301, -0.270588219165802, -0.09019607305526733, -0.1764705777168274, -0.19999998807907104, -0.1764705777168274, -0.2862744927406311, -0.13725489377975464, -0.2862744927406311, -0.1921568512916565, 0.003921627998352051, -0.24705880880355835, -0.5607843399047852, -0.05882352590560913, -0.011764705181121826, -0.4588235020637512, -0.5607843399047852, -0.5607843399047852, -0.45098036527633667, -0.270588219165802, -0.26274508237838745, -0.12156862020492554, -0.09019607305526733, -0.13725489377975464], [0.6549019813537598, 0.4431372880935669, 0.37254905700683594, 0.41960787773132324, 0.4431372880935669, 0.027451038360595703, -0.30980390310287476, 0.09019613265991211, 0.16078436374664307, 0.003921627998352051, -0.29411762952804565, -0.498039186000824, -0.05098038911819458, -0.1294117569923401, -0.08235293626785278, 0.12156867980957031, -0.27843135595321655, -0.24705880880355835, 0.09019613265991211, -0.08235293626785278, -0.1450980305671692, -0.2235293984413147, -0.46666663885116577, -0.5372549295425415, -0.6784313917160034, -0.5137255191802979, -0.4588235020637512, -0.1764705777168274, -0.06666666269302368, -0.05882352590560913, -0.09803920984268188, -0.1294117569923401], [0.5058823823928833, 0.48235297203063965, 0.3803921937942505, 0.40392160415649414, 0.4274510145187378, 0.16862750053405762, -0.29411762952804565, -0.05098038911819458, -0.027450978755950928, 0.06666672229766846, 0.050980448722839355, -0.5372549295425415, -0.07450979948043823, -0.2392156720161438, 0.050980448722839355, 0.3803921937942505, -0.07450979948043823, -0.4117646813392639, -0.06666666269302368, -0.027450978755950928, 0.011764764785766602, -0.32549017667770386, -0.615686297416687, -0.6000000238418579, -0.615686297416687, -0.29411762952804565, -0.2862744927406311, -0.07450979948043823, -0.05098038911819458, -0.11372548341751099, -0.1294117569923401, -0.1607843041419983], [0.22352945804595947, 0.5137255191802979, 0.3960784673690796, 0.35686278343200684, 0.41960787773132324, 0.23137259483337402, -0.1921568512916565, 0.058823585510253906, 0.37254905700683594, -0.1764705777168274, -0.29411762952804565, -0.3960784077644348, -0.29411762952804565, -0.07450979948043823, 0.35686278343200684, 0.4274510145187378, 0.16078436374664307, -0.21568626165390015, -0.38823527097702026, -0.3960784077644348, -0.5215686559677124, -0.5921568870544434, -0.6392157077789307, -0.7411764860153198, -0.5529412031173706, -0.4431372284889221, -0.21568626165390015, -0.019607841968536377, -0.03529411554336548, -0.1450980305671692, -0.11372548341751099, -0.1764705777168274], [-0.05882352590560913, 0.5686274766921997, 0.3960784673690796, 0.32549023628234863, 0.40392160415649414, 0.12941181659698486, -0.3176470398902893, 0.20000004768371582, 0.9372549057006836, 0.7411764860153198, 0.09803926944732666, 0.10588240623474121, 0.22352945804595947, 0.4274510145187378, 0.5372549295425415, 0.5058823823928833, 0.3490196466445923, 0.043137311935424805, -0.1450980305671692, -0.5137255191802979, -0.615686297416687, -0.5764706134796143, -0.45098036527633667, -0.3647058606147766, -0.3333333134651184, -0.34117645025253296, -0.2235293984413147, -0.2078431248664856, -0.18431371450424194, -0.24705880880355835, -0.27843135595321655, -0.29411762952804565], [-0.1764705777168274, 0.545098066329956, 0.43529415130615234, 0.3490196466445923, 0.38823533058166504, 0.14509809017181396, -0.12156862020492554, 0.6549019813537598, 0.9764705896377563, 0.9843137264251709, 0.7568627595901489, 0.12156867980957031, 0.035294175148010254, 0.10588240623474121, 0.043137311935424805, 0.043137311935424805, -0.027450978755950928, -0.270588219165802, -0.3176470398902893, -0.35686272382736206, -0.34117645025253296, -0.34117645025253296, -0.3333333134651184, -0.270588219165802, -0.26274508237838745, -0.2862744927406311, -0.24705880880355835, -0.18431371450424194, -0.15294116735458374, -0.2392156720161438, -0.2392156720161438, -0.2549019455909729], [-0.3019607663154602, 0.07450985908508301, 0.3176470994949341, 0.3647059202194214, 0.4274510145187378, 0.3333333730697632, 0.301960825920105, 0.9215686321258545, 0.9686274528503418, 0.8117647171020508, 0.06666672229766846, -0.30980390310287476, -0.37254899740219116, -0.40392154455184937, -0.4117646813392639, -0.43529409170150757, -0.3803921341896057, -0.3647058606147766, -0.3647058606147766, -0.35686272382736206, -0.32549017667770386, -0.29411762952804565, -0.3019607663154602, -0.3176470398902893, -0.3019607663154602, -0.270588219165802, -0.26274508237838745, -0.24705880880355835, -0.24705880880355835, -0.26274508237838745, -0.2549019455909729, -0.29411762952804565], [-0.2862744927406311, -0.3176470398902893, -0.19999998807907104, 0.20000004768371582, 0.40392160415649414, 0.06666672229766846, 0.48235297203063965, 0.9607843160629272, 0.9215686321258545, 0.24705886840820312, -0.26274508237838745, -0.34117645025253296, -0.34117645025253296, -0.3333333134651184, -0.3490195870399475, -0.34117645025253296, -0.32549017667770386, -0.34117645025253296, -0.35686272382736206, -0.3803921341896057, -0.3490195870399475, -0.32549017667770386, -0.3333333134651184, -0.3019607663154602, -0.27843135595321655, -0.1921568512916565, -0.1921568512916565, -0.2078431248664856, -0.19999998807907104, -0.2235293984413147, -0.26274508237838745, -0.1921568512916565], [-0.1294117569923401, -0.26274508237838745, -0.3333333134651184, -0.16862744092941284, 0.16078436374664307, 0.06666672229766846, 0.6705882549285889, 0.9843137264251709, 0.5529412031173706, -0.270588219165802, -0.2862744927406311, -0.30980390310287476, -0.29411762952804565, -0.29411762952804565, -0.3490195870399475, -0.35686272382736206, -0.35686272382736206, -0.3647058606147766, -0.37254899740219116, -0.3490195870399475, -0.32549017667770386, -0.3019607663154602, -0.27843135595321655, -0.2549019455909729, -0.15294116735458374, -0.13725489377975464, -0.1450980305671692, -0.15294116735458374, -0.15294116735458374, -0.1764705777168274, -0.03529411554336548, 0.07450985908508301], [-0.10588234663009644, -0.2235293984413147, -0.32549017667770386, -0.3490195870399475, -0.2549019455909729, 0.13725495338439941, 0.7960784435272217, 0.9215686321258545, 0.12156867980957031, -0.27843135595321655, -0.3176470398902893, -0.26274508237838745, -0.27843135595321655, -0.35686272382736206, -0.35686272382736206, -0.3490195870399475, -0.34117645025253296, -0.3490195870399475, -0.32549017667770386, -0.30980390310287476, -0.29411762952804565, -0.2392156720161438, -0.16862744092941284, -0.13725489377975464, -0.1764705777168274, -0.2392156720161438, -0.2549019455909729, -0.2862744927406311, -0.15294116735458374, 0.019607901573181152, 0.08235299587249756, -0.019607841968536377], [-0.13725489377975464, -0.23137253522872925, -0.3019607663154602, -0.32549017667770386, -0.3490195870399475, -0.16862744092941284, 0.7176470756530762, 0.7882353067398071, -0.011764705181121826, -0.18431371450424194, -0.26274508237838745, -0.3176470398902893, -0.2392156720161438, -0.3176470398902893, -0.37254899740219116, -0.35686272382736206, -0.34117645025253296, -0.3176470398902893, -0.3019607663154602, -0.3019607663154602, -0.2392156720161438, -0.27843135595321655, -0.270588219165802, -0.19999998807907104, -0.2078431248664856, -0.270588219165802, -0.3333333134651184, -0.2078431248664856, 0.011764764785766602, -0.011764705181121826, -0.23137253522872925, -0.24705880880355835], [-0.15294116735458374, -0.2392156720161438, -0.27843135595321655, -0.30980390310287476, -0.30980390310287476, -0.34117645025253296, 0.043137311935424805, 0.545098066329956, -0.21568626165390015, -0.2392156720161438, -0.26274508237838745, -0.2549019455909729, -0.1921568512916565, -0.21568626165390015, -0.24705880880355835, -0.3490195870399475, -0.3803921341896057, -0.37254899740219116, -0.30980390310287476, -0.27843135595321655, -0.27843135595321655, -0.2549019455909729, -0.270588219165802, -0.27843135595321655, -0.29411762952804565, -0.270588219165802, -0.19999998807907104, -0.019607841968536377, -0.13725489377975464, -0.29411762952804565, -0.529411792755127, -0.270588219165802], [-0.027450978755950928, -0.21568626165390015, -0.30980390310287476, -0.2862744927406311, -0.3176470398902893, -0.3019607663154602, -0.3803921341896057, -0.1607843041419983, -0.3019607663154602, -0.3960784077644348, -0.4431372284889221, -0.35686272382736206, -0.270588219165802, -0.21568626165390015, -0.19999998807907104, -0.27843135595321655, -0.26274508237838745, -0.2235293984413147, -0.2235293984413147, -0.2392156720161438, -0.2549019455909729, -0.26274508237838745, -0.30980390310287476, -0.3490195870399475, -0.2862744927406311, -0.12156862020492554, 0.035294175148010254, 0.027451038360595703, -0.09019607305526733, -0.2392156720161438, -0.498039186000824, -0.3333333134651184], [-0.09019607305526733, -0.19999998807907104, -0.3333333134651184, -0.2862744927406311, -0.29411762952804565, -0.27843135595321655, -0.30980390310287476, -0.3647058606147766, -0.3333333134651184, -0.43529409170150757, -0.4745097756385803, -0.41960781812667847, -0.4431372284889221, -0.427450954914093, -0.37254899740219116, -0.32549017667770386, -0.2549019455909729, -0.2078431248664856, -0.1450980305671692, -0.06666666269302368, -0.11372548341751099, -0.2549019455909729, -0.30980390310287476, -0.30980390310287476, -0.1764705777168274, 0.019607901573181152, 0.22352945804595947, 0.13725495338439941, -0.09803920984268188, -0.35686272382736206, -0.35686272382736206, -0.498039186000824], [-0.1607843041419983, -0.1764705777168274, -0.3019607663154602, -0.32549017667770386, -0.3019607663154602, -0.27843135595321655, -0.3176470398902893, -0.3647058606147766, -0.3803921341896057, -0.4588235020637512, -0.4823529124259949, -0.427450954914093, -0.4588235020637512, -0.427450954914093, -0.5058823823928833, -0.545098066329956, -0.45098036527633667, -0.3176470398902893, -0.18431371450424194, -0.06666666269302368, -0.1294117569923401, -0.24705880880355835, -0.2549019455909729, -0.3176470398902893, -0.1450980305671692, 0.027451038360595703, 0.14509809017181396, 0.058823585510253906, -0.2235293984413147, -0.3960784077644348, -0.34117645025253296, -0.4745097756385803]], [[-0.615686297416687, -0.6313725709915161, -0.6000000238418579, -0.5843137502670288, -0.6392157077789307, -0.6784313917160034, -0.6313725709915161, -0.6470588445663452, -0.6549019813537598, -0.6784313917160034, -0.6784313917160034, -0.5921568870544434, -0.615686297416687, -0.6784313917160034, -0.6470588445663452, -0.6549019813537598, -0.686274528503418, -0.7019608020782471, -0.6941176652908325, -0.6627451181411743, -0.6549019813537598, -0.6470588445663452, -0.6470588445663452, -0.6627451181411743, -0.6549019813537598, -0.6941176652908325, -0.6627451181411743, -0.6784313917160034, -0.7019608020782471, -0.7176470756530762, -0.7176470756530762, -0.7411764860153198], [-0.6000000238418579, -0.686274528503418, -0.6470588445663452, -0.5607843399047852, -0.615686297416687, -0.6627451181411743, -0.6313725709915161, -0.6470588445663452, -0.6392157077789307, -0.7019608020782471, -0.6784313917160034, -0.5764706134796143, -0.5921568870544434, -0.6784313917160034, -0.686274528503418, -0.7411764860153198, -0.7647058963775635, -0.7411764860153198, -0.6784313917160034, -0.6078431606292725, -0.5843137502670288, -0.5686274766921997, -0.5921568870544434, -0.6235294342041016, -0.6078431606292725, -0.6392157077789307, -0.6470588445663452, -0.7019608020782471, -0.7333333492279053, -0.7568627595901489, -0.7490196228027344, -0.7333333492279053], [-0.6313725709915161, -0.7411764860153198, -0.7176470756530762, -0.6235294342041016, -0.6705882549285889, -0.6549019813537598, -0.6470588445663452, -0.6470588445663452, -0.6627451181411743, -0.6627451181411743, -0.6235294342041016, -0.5529412031173706, -0.6000000238418579, -0.7019608020782471, -0.7098039388656616, -0.7254902124404907, -0.6941176652908325, -0.6313725709915161, -0.5764706134796143, -0.615686297416687, -0.5921568870544434, -0.6078431606292725, -0.6313725709915161, -0.6078431606292725, -0.6235294342041016, -0.5686274766921997, -0.6000000238418579, -0.6941176652908325, -0.7254902124404907, -0.7333333492279053, -0.7333333492279053, -0.7411764860153198], [-0.686274528503418, -0.7490196228027344, -0.7568627595901489, -0.6549019813537598, -0.6627451181411743, -0.6392157077789307, -0.6235294342041016, -0.6235294342041016, -0.6549019813537598, -0.6470588445663452, -0.5529412031173706, -0.2549019455909729, -0.4117646813392639, -0.6784313917160034, -0.6313725709915161, -0.5764706134796143, -0.545098066329956, -0.4745097756385803, -0.6313725709915161, -0.4901960492134094, -0.40392154455184937, -0.34117645025253296, -0.4823529124259949, -0.6078431606292725, -0.5921568870544434, -0.6941176652908325, -0.6470588445663452, -0.6392157077789307, -0.6627451181411743, -0.6941176652908325, -0.6941176652908325, -0.7176470756530762], [-0.6784313917160034, -0.6235294342041016, -0.615686297416687, -0.6313725709915161, -0.6627451181411743, -0.686274528503418, -0.6313725709915161, -0.6549019813537598, -0.6784313917160034, -0.6705882549285889, -0.5372549295425415, 0.2862745523452759, -0.1607843041419983, -0.5607843399047852, -0.529411792755127, -0.4431372284889221, -0.6078431606292725, -0.7568627595901489, -0.5607843399047852, -0.23137253522872925, -0.1294117569923401, -0.07450979948043823, -0.1764705777168274, -0.270588219165802, -0.4745097756385803, -0.45098036527633667, -0.6313725709915161, -0.6470588445663452, -0.6235294342041016, -0.6392157077789307, -0.7176470756530762, -0.7176470756530762], [-0.5764706134796143, -0.498039186000824, -0.5529412031173706, -0.5843137502670288, -0.6549019813537598, -0.6941176652908325, -0.6784313917160034, -0.6784313917160034, -0.7098039388656616, -0.6941176652908325, -0.6705882549285889, -0.3333333134651184, -0.38823527097702026, -0.545098066329956, -0.6627451181411743, -0.7568627595901489, -0.6627451181411743, -0.6470588445663452, -0.40392154455184937, -0.13725489377975464, -0.05882352590560913, -0.04313725233078003, -0.09019607305526733, -0.24705880880355835, -0.2392156720161438, -0.32549017667770386, -0.6313725709915161, -0.7098039388656616, -0.615686297416687, -0.545098066329956, -0.6549019813537598, -0.686274528503418], [-0.5529412031173706, -0.37254899740219116, -0.8666666746139526, -0.7803921699523926, -0.6235294342041016, -0.6627451181411743, -0.686274528503418, -0.6627451181411743, -0.6705882549285889, -0.7098039388656616, -0.6941176652908325, -0.5921568870544434, -0.5372549295425415, -0.4117646813392639, -0.45098036527633667, -0.5529412031173706, -0.43529409170150757, -0.498039186000824, -0.41960781812667847, -0.05098038911819458, 0.035294175148010254, -0.15294116735458374, -0.29411762952804565, -0.26274508237838745, -0.1921568512916565, -0.3960784077644348, -0.4588235020637512, -0.6941176652908325, -0.7176470756530762, -0.545098066329956, -0.6235294342041016, -0.6941176652908325], [-0.29411762952804565, -0.27843135595321655, -0.7019608020782471, -0.6784313917160034, -0.5607843399047852, -0.6705882549285889, -0.7176470756530762, -0.6941176652908325, -0.615686297416687, -0.6000000238418579, -0.6000000238418579, -0.615686297416687, -0.3960784077644348, -0.1607843041419983, -0.270588219165802, -0.3803921341896057, -0.30980390310287476, -0.35686272382736206, -0.4588235020637512, -0.1607843041419983, 0.09803926944732666, -0.12156862020492554, -0.3647058606147766, -0.30980390310287476, -0.34117645025253296, -0.41960781812667847, -0.545098066329956, -0.615686297416687, -0.7490196228027344, -0.6078431606292725, -0.6000000238418579, -0.6941176652908325], [0.12941181659698486, -0.1764705777168274, -0.5372549295425415, -0.11372548341751099, -0.35686272382736206, -0.6627451181411743, -0.6784313917160034, -0.6078431606292725, -0.4823529124259949, -0.2549019455909729, -0.5372549295425415, -0.38823527097702026, -0.05098038911819458, 0.003921627998352051, -0.2078431248664856, -0.41960781812667847, -0.3960784077644348, -0.35686272382736206, -0.427450954914093, -0.5215686559677124, -0.12156862020492554, -0.03529411554336548, -0.270588219165802, -0.45098036527633667, -0.4588235020637512, -0.40392154455184937, -0.4745097756385803, -0.5843137502670288, -0.7882353067398071, -0.7254902124404907, -0.5372549295425415, -0.6470588445663452], [0.27843141555786133, 0.12156867980957031, -0.1764705777168274, 0.16862750053405762, -0.12156862020492554, -0.6000000238418579, -0.6313725709915161, -0.529411792755127, 0.14509809017181396, 0.5529412031173706, 0.301960825920105, -0.06666666269302368, 0.13725495338439941, -0.019607841968536377, -0.1607843041419983, -0.3803921341896057, -0.3803921341896057, -0.4431372284889221, -0.5843137502670288, -0.545098066329956, -0.12156862020492554, -0.04313725233078003, -0.10588234663009644, -0.3019607663154602, -0.41960781812667847, -0.38823527097702026, -0.38823527097702026, -0.4431372284889221, -0.6627451181411743, -0.8823529481887817, -0.6549019813537598, -0.5529412031173706], [0.37254905700683594, -0.04313725233078003, 0.23921573162078857, 0.3176470994949341, -0.04313725233078003, -0.6078431606292725, -0.6000000238418579, -0.6313725709915161, 0.40392160415649414, 0.772549033164978, 0.4745098352432251, 0.027451038360595703, 0.21568632125854492, 0.035294175148010254, -0.18431371450424194, -0.18431371450424194, -0.4588235020637512, -0.3960784077644348, -0.686274528503418, -0.3960784077644348, 0.20784318447113037, 0.07450985908508301, 0.08235299587249756, -0.27843135595321655, -0.3960784077644348, -0.24705880880355835, -0.3803921341896057, -0.427450954914093, -0.5372549295425415, -0.7411764860153198, -0.7568627595901489, -0.6392157077789307], [0.48235297203063965, -0.09019607305526733, 0.20000004768371582, 0.3960784673690796, 0.06666672229766846, -0.5372549295425415, -0.5686274766921997, -0.6549019813537598, -0.37254899740219116, 0.4745098352432251, 0.2862745523452759, 0.043137311935424805, 0.18431377410888672, 0.24705886840820312, -0.16862744092941284, -0.2549019455909729, -0.3019607663154602, -0.3803921341896057, -0.7333333492279053, -0.11372548341751099, 0.5058823823928833, 0.11372554302215576, 0.019607901573181152, -0.35686272382736206, -0.4117646813392639, -0.30980390310287476, -0.26274508237838745, -0.3647058606147766, -0.38823527097702026, -0.5686274766921997, -0.6235294342041016, -0.7960784435272217], [0.5215686559677124, -0.1764705777168274, 0.12941181659698486, 0.45098042488098145, 0.043137311935424805, -0.46666663885116577, -0.5843137502670288, -0.6313725709915161, -0.6549019813537598, 0.19215691089630127, -0.011764705181121826, -0.26274508237838745, 0.16078436374664307, 0.43529415130615234, 0.011764764785766602, -0.23137253522872925, -0.1764705777168274, -0.1450980305671692, -0.6313725709915161, 0.09803926944732666, 0.3960784673690796, 0.09803926944732666, -0.1294117569923401, -0.3490195870399475, -0.3803921341896057, -0.37254899740219116, -0.3333333134651184, -0.3647058606147766, -0.3019607663154602, -0.427450954914093, -0.498039186000824, -0.8117647171020508], [0.5137255191802979, -0.1921568512916565, 0.27843141555786133, 0.5058823823928833, -0.23137253522872925, -0.4823529124259949, -0.545098066329956, -0.6078431606292725, -0.6941176652908325, -0.05882352590560913, -0.1921568512916565, -0.003921568393707275, 0.21568632125854492, 0.5686274766921997, 0.23137259483337402, -0.08235293626785278, -0.1607843041419983, -0.1450980305671692, -0.46666663885116577, 0.15294122695922852, 0.3647059202194214, 0.06666672229766846, -0.18431371450424194, -0.37254899740219116, -0.40392154455184937, -0.45098036527633667, -0.43529409170150757, -0.26274508237838745, -0.2235293984413147, -0.3647058606147766, -0.4588235020637512, -0.7333333492279053], [0.5372549295425415, -0.12156862020492554, 0.3490196466445923, 0.4745098352432251, -0.1450980305671692, -0.4745097756385803, -0.5137255191802979, -0.5686274766921997, -0.7333333492279053, -0.30980390310287476, -0.1921568512916565, 0.32549023628234863, 0.32549023628234863, 0.24705886840820312, 0.09803926944732666, 0.050980448722839355, -0.019607841968536377, -0.2549019455909729, -0.45098036527633667, 0.16862750053405762, 0.3333333730697632, -0.003921568393707275, -0.04313725233078003, -0.1764705777168274, -0.3490195870399475, -0.2862744927406311, -0.29411762952804565, -0.18431371450424194, -0.1294117569923401, -0.37254899740219116, -0.5843137502670288, -0.6313725709915161], [0.545098066329956, 0.06666672229766846, 0.3647059202194214, 0.41960787773132324, 0.11372554302215576, -0.3960784077644348, -0.30980390310287476, -0.3960784077644348, -0.5921568870544434, -0.270588219165802, -0.09019607305526733, 0.6549019813537598, 0.8039215803146362, 0.07450985908508301, 0.019607901573181152, -0.12156862020492554, -0.2078431248664856, -0.2549019455909729, -0.4117646813392639, -0.07450979948043823, 0.14509809017181396, 0.08235299587249756, -0.2078431248664856, -0.37254899740219116, -0.46666663885116577, -0.3176470398902893, -0.2235293984413147, -0.2235293984413147, -0.270588219165802, -0.5764706134796143, -0.6235294342041016, -0.6235294342041016], [0.6000000238418579, 0.2549020051956177, 0.3960784673690796, 0.4745098352432251, 0.3490196466445923, -0.29411762952804565, -0.011764705181121826, -0.11372548341751099, -0.35686272382736206, -0.7098039388656616, 0.043137311935424805, 0.21568632125854492, 0.10588240623474121, -0.08235293626785278, -0.30980390310287476, -0.29411762952804565, -0.27843135595321655, -0.3176470398902893, -0.545098066329956, -0.18431371450424194, -0.1450980305671692, -0.011764705181121826, -0.07450979948043823, -0.2392156720161438, -0.43529409170150757, -0.3960784077644348, -0.26274508237838745, -0.35686272382736206, -0.5686274766921997, -0.6470588445663452, -0.5686274766921997, -0.6392157077789307], [0.686274528503418, 0.4117647409439087, 0.4431372880935669, 0.5215686559677124, 0.458823561668396, -0.1764705777168274, -0.19999998807907104, 0.13725495338439941, -0.1294117569923401, -0.5215686559677124, -0.1764705777168274, -0.2549019455909729, -0.3019607663154602, -0.3019607663154602, -0.427450954914093, -0.23137253522872925, -0.30980390310287476, -0.2549019455909729, -0.19999998807907104, -0.498039186000824, -0.7490196228027344, -0.1764705777168274, -0.09803920984268188, -0.5215686559677124, -0.6000000238418579, -0.5843137502670288, -0.4901960492134094, -0.38823527097702026, -0.498039186000824, -0.46666663885116577, -0.498039186000824, -0.5764706134796143], [0.6078431606292725, 0.5058823823928833, 0.48235297203063965, 0.5137255191802979, 0.4745098352432251, 0.043137311935424805, -0.24705880880355835, 0.12156867980957031, 0.10588240623474121, -0.1294117569923401, -0.37254899740219116, -0.5686274766921997, -0.15294116735458374, -0.24705880880355835, -0.21568626165390015, 0.043137311935424805, -0.270588219165802, -0.270588219165802, -0.05882352590560913, -0.270588219165802, -0.27843135595321655, -0.32549017667770386, -0.545098066329956, -0.5921568870544434, -0.6941176652908325, -0.529411792755127, -0.686274528503418, -0.5372549295425415, -0.5137255191802979, -0.5764706134796143, -0.6470588445663452, -0.6392157077789307], [0.4117647409439087, 0.46666669845581055, 0.41960787773132324, 0.45098042488098145, 0.4431372880935669, 0.19215691089630127, -0.2235293984413147, 0.035294175148010254, 0.019607901573181152, 0.058823585510253906, -0.011764705181121826, -0.6000000238418579, -0.15294116735458374, -0.32549017667770386, -0.03529411554336548, 0.3176470994949341, -0.07450979948043823, -0.427450954914093, -0.1921568512916565, -0.1764705777168274, -0.07450979948043823, -0.38823527097702026, -0.6549019813537598, -0.6078431606292725, -0.5921568870544434, -0.270588219165802, -0.529411792755127, -0.46666663885116577, -0.498039186000824, -0.5921568870544434, -0.6078431606292725, -0.6392157077789307], [0.14509809017181396, 0.46666669845581055, 0.37254905700683594, 0.3490196466445923, 0.4117647409439087, 0.2549020051956177, -0.1294117569923401, 0.14509809017181396, 0.45098042488098145, -0.1294117569923401, -0.3176470398902893, -0.427450954914093, -0.32549017667770386, -0.09019607305526733, 0.35686278343200684, 0.38823533058166504, 0.16078436374664307, -0.2078431248664856, -0.4823529124259949, -0.5058823823928833, -0.5529412031173706, -0.5764706134796143, -0.6000000238418579, -0.6784313917160034, -0.4588235020637512, -0.3490195870399475, -0.4117646813392639, -0.35686272382736206, -0.40392154455184937, -0.5215686559677124, -0.4588235020637512, -0.5058823823928833], [-0.027450978755950928, 0.5686274766921997, 0.3803921937942505, 0.3176470994949341, 0.40392160415649414, 0.15294122695922852, -0.2862744927406311, 0.24705886840820312, 0.9607843160629272, 0.7647058963775635, 0.12941181659698486, 0.15294122695922852, 0.2862745523452759, 0.5058823823928833, 0.6313725709915161, 0.545098066329956, 0.41960787773132324, 0.12156867980957031, -0.1450980305671692, -0.5137255191802979, -0.545098066329956, -0.46666663885116577, -0.3176470398902893, -0.19999998807907104, -0.13725489377975464, -0.1294117569923401, -0.04313725233078003, -0.06666666269302368, -0.05882352590560913, -0.12156862020492554, -0.12156862020492554, -0.09803920984268188], [0.043137311935424805, 0.6705882549285889, 0.5058823823928833, 0.38823533058166504, 0.4274510145187378, 0.17647063732147217, -0.11372548341751099, 0.6392157077789307, 0.9372549057006836, 0.9764705896377563, 0.8196078538894653, 0.23137259483337402, 0.16862750053405762, 0.2705882787704468, 0.22352945804595947, 0.19215691089630127, 0.16078436374664307, -0.06666666269302368, -0.18431371450424194, -0.2078431248664856, -0.1294117569923401, -0.13725489377975464, -0.09803920984268188, -0.019607841968536377, 0.027451038360595703, 0.019607901573181152, 0.058823585510253906, 0.10588240623474121, 0.11372554302215576, 0.035294175148010254, 0.07450985908508301, 0.035294175148010254], [0.058823585510253906, 0.3176470994949341, 0.4745098352432251, 0.4745098352432251, 0.5058823823928833, 0.3647059202194214, 0.2862745523452759, 0.8588235378265381, 0.8901960849761963, 0.7882353067398071, 0.20000004768371582, -0.1294117569923401, -0.1764705777168274, -0.1764705777168274, -0.1607843041419983, -0.2078431248664856, -0.09803920984268188, -0.05882352590560913, -0.11372548341751099, -0.09019607305526733, -0.019607841968536377, -0.019607841968536377, -0.011764705181121826, 0.003921627998352051, 0.035294175148010254, 0.09019613265991211, 0.07450985908508301, 0.07450985908508301, 0.058823585510253906, 0.050980448722839355, 0.09019613265991211, 0.043137311935424805], [0.10588240623474121, 0.019607901573181152, 0.050980448722839355, 0.3803921937942505, 0.49803924560546875, 0.07450985908508301, 0.41960787773132324, 0.8980392217636108, 0.9215686321258545, 0.37254905700683594, -0.003921568393707275, -0.07450979948043823, -0.06666666269302368, -0.05098038911819458, -0.05882352590560913, -0.09019607305526733, -0.08235293626785278, -0.08235293626785278, -0.09803920984268188, -0.11372548341751099, -0.05882352590560913, -0.019607841968536377, -0.019607841968536377, 0.019607901573181152, 0.050980448722839355, 0.13725495338439941, 0.11372554302215576, 0.11372554302215576, 0.14509809017181396, 0.12941181659698486, 0.09803926944732666, 0.16862750053405762], [0.2705882787704468, 0.09803926944732666, -0.027450978755950928, 0.06666672229766846, 0.30980396270751953, 0.12156867980957031, 0.6392157077789307, 0.9529411792755127, 0.6078431606292725, -0.07450979948043823, 0.003921627998352051, -0.019607841968536377, -0.003921568393707275, -0.003921568393707275, -0.05098038911819458, -0.09803920984268188, -0.11372548341751099, -0.12156862020492554, -0.11372548341751099, -0.08235293626785278, -0.03529411554336548, 0.027451038360595703, 0.050980448722839355, 0.08235299587249756, 0.17647063732147217, 0.19215691089630127, 0.15294122695922852, 0.16862750053405762, 0.20784318447113037, 0.19215691089630127, 0.30980396270751953, 0.4274510145187378], [0.29411768913269043, 0.15294122695922852, 0.019607901573181152, -0.04313725233078003, -0.011764705181121826, 0.2862745523452759, 0.8352941274642944, 0.9372549057006836, 0.20000004768371582, -0.10588234663009644, -0.03529411554336548, 0.027451038360595703, 0.011764764785766602, -0.06666666269302368, -0.06666666269302368, -0.06666666269302368, -0.06666666269302368, -0.06666666269302368, -0.03529411554336548, -0.003921568393707275, 0.027451038360595703, 0.10588240623474121, 0.17647063732147217, 0.20784318447113037, 0.17647063732147217, 0.10588240623474121, 0.09803926944732666, 0.08235299587249756, 0.23921573162078857, 0.3960784673690796, 0.4274510145187378, 0.32549023628234863], [0.2705882787704468, 0.16862750053405762, 0.08235299587249756, 0.043137311935424805, -0.011764705181121826, 0.08235299587249756, 0.8274509906768799, 0.8352941274642944, 0.09803926944732666, -0.011764705181121826, 0.011764764785766602, -0.027450978755950928, 0.043137311935424805, -0.03529411554336548, -0.09019607305526733, -0.06666666269302368, -0.04313725233078003, -0.011764705181121826, 0.019607901573181152, 0.035294175148010254, 0.09803926944732666, 0.08235299587249756, 0.09019613265991211, 0.16078436374664307, 0.15294122695922852, 0.09019613265991211, 0.043137311935424805, 0.20000004768371582, 0.4274510145187378, 0.3803921937942505, 0.11372554302215576, 0.09019613265991211], [0.2627451419830322, 0.15294122695922852, 0.12156867980957031, 0.10588240623474121, 0.08235299587249756, -0.019607841968536377, 0.24705886840820312, 0.6549019813537598, -0.06666666269302368, -0.05098038911819458, 0.003921627998352051, 0.019607901573181152, 0.09019613265991211, 0.058823585510253906, 0.027451038360595703, -0.05882352590560913, -0.07450979948043823, -0.05882352590560913, 0.019607901573181152, 0.058823585510253906, 0.06666672229766846, 0.09019613265991211, 0.08235299587249756, 0.06666672229766846, 0.058823585510253906, 0.08235299587249756, 0.18431377410888672, 0.3960784673690796, 0.2862745523452759, 0.09803926944732666, -0.1921568512916565, 0.06666672229766846], [0.38823533058166504, 0.16078436374664307, 0.07450985908508301, 0.14509809017181396, 0.09019613265991211, 0.035294175148010254, -0.11372548341751099, 0.043137311935424805, -0.10588234663009644, -0.1764705777168274, -0.1764705777168274, -0.08235293626785278, 0.003921627998352051, 0.058823585510253906, 0.07450985908508301, 0.003921627998352051, 0.027451038360595703, 0.07450985908508301, 0.09019613265991211, 0.08235299587249756, 0.07450985908508301, 0.06666672229766846, 0.027451038360595703, -0.019607841968536377, 0.043137311935424805, 0.20784318447113037, 0.40392160415649414, 0.41960787773132324, 0.3176470994949341, 0.14509809017181396, -0.15294116735458374, -0.003921568393707275], [0.3176470994949341, 0.16078436374664307, 0.035294175148010254, 0.12156867980957031, 0.09019613265991211, 0.050980448722839355, -0.019607841968536377, -0.12156862020492554, -0.09803920984268188, -0.18431371450424194, -0.19999998807907104, -0.1450980305671692, -0.16862744092941284, -0.15294116735458374, -0.09803920984268188, -0.05882352590560913, 0.003921627998352051, 0.058823585510253906, 0.12941181659698486, 0.22352945804595947, 0.19215691089630127, 0.050980448722839355, -0.003921568393707275, -0.003921568393707275, 0.12941181659698486, 0.3333333730697632, 0.545098066329956, 0.4901961088180542, 0.2862745523452759, 0.019607901573181152, -0.011764705181121826, -0.1607843041419983], [0.2549020051956177, 0.16862750053405762, 0.035294175148010254, 0.050980448722839355, 0.050980448722839355, 0.035294175148010254, -0.03529411554336548, -0.09803920984268188, -0.10588234663009644, -0.1764705777168274, -0.2078431248664856, -0.15294116735458374, -0.18431371450424194, -0.15294116735458374, -0.23137253522872925, -0.3019607663154602, -0.21568626165390015, -0.07450979948043823, 0.07450985908508301, 0.19215691089630127, 0.13725495338439941, 0.027451038360595703, 0.019607901573181152, -0.03529411554336548, 0.13725495338439941, 0.30980396270751953, 0.4274510145187378, 0.37254905700683594, 0.13725495338439941, -0.027450978755950928, 0.011764764785766602, -0.13725489377975464]]]] } }'
```

**Test Result**

```bash
{"data":{"names":[],"ndarray":[[-1.3545894622802734,-2.094174385070801,0.3954501748085022,3.433469295501709,-0.08178478479385376,1.7413527965545654,0.9827516674995422,-1.3434531688690186,0.6330254673957825,-1.5354188680648804]]},"meta":{"requestPath":{"model":"NOT_IMPLEMENTED:NOT_IMPLEMENTED"}}}
```

